--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,27 @@ body {
     border-bottom: 3px solid black;
 }
 
+.img1div {
+    overflow: hidden;
+}
+
+#ph1, #ph2, #ph3, #ph4, #ph5 {
+    position: relative;
+    bottom: 50px;
+    background-color: #4aaaa5;
+
+}
+
+.PLlinks {
+    color: #ffffff;
+}
+
+/* a:hover {
+
+} */
+
+#ph1:
+
 #contact {
     position: relative;
     bottom: 30px;
