--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,8 +44,9 @@ body {
 
 #ph1, #ph2, #ph3, #ph4, #ph5 {
     position: relative;
-    bottom: 50px;
+    bottom: 70px;
     background-color: #4aaaa5;
+    padding: 5px;
 
 }
 
@@ -53,11 +54,10 @@ body {
     color: #ffffff;
 }
 
-/* a:hover {
+.PLlinks:hover {
+    box-shadow: 0px 0px 10px 0px solid black;
+}
 
-} */
-
-#ph1:
 
 #contact {
     position: relative;
