--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,14 +4,19 @@ body {
     background-image: url("../images/background.png")
 }
 
+.contentDiv{
+    background-color: #e9ecef;
+    padding: 64px 32px 64px 32px;
+    margin-bottom: 80px;
+    border-radius: .3rem;
+}
+
 
 /* header */
 
 #headerdiv {
     border-bottom: 3px solid black;
-    padding: 0px;
-    /* margin: 0px; */
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 
@@ -81,7 +86,8 @@ body {
 }
 
 #conJT {
-    margin-bottom: 60px;
+    /* margin-bottom: 80px; */
+    /* margin-right: 10px; */
 }
 
 .nameCdiv {
@@ -112,14 +118,22 @@ body {
 
 
 /* Footer Content */
+/* Adjusted HTML to make footer stick to bottom */
+html {
+    position: relative;
+    min-height: 100%;
+}
 
 #sticky-footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
     color: #ffffff;
     background-color: #777777;
     padding: 20px;
-    text-align: center;
-    border-top: 3px #4aaaa5;
-    /* box-shadow: 0px 0px 40px 0px #4aaaa5; */
+    border-top: 5px double #4aaaa5;
+
 }
 
 
