basically done, need to add links for other medias and customize color palette.

--- a/Version 2/css/freelancer.css
+++ b/Version 2/css/freelancer.css
@@ -131,6 +131,10 @@ section h2 {
   padding: 0.8rem;
 }
 
+#myPhoto {
+  border-radius: 50%;
+}
+
 @media (min-width: 992px) {
   #mainNav {
     padding-top: 1.5rem;
